--- a/portfolio.html
+++ b/portfolio.html
@@ -204,6 +204,21 @@
           </li>
         </ul>
       </div>
+      <div class="ftr-mailing">
+        <p class="ftr-mailing-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+        <form name="#"  autocomplete="off" >
+          <label for="email" class="ftr-label-email">
+            <input type="email" name="email" class="ftr-input-email" placeholder="Email" />
+          </label>
+          <button type="submit" class="ftr-button-send blue-background">
+            <div class="ftr-btn-send">
+              <p class="ftr-button-txt" >Подписаться</p>
+              <svg class="ftr-icons-send">
+                <use class="" href="./img/icons/sprite-form.svg#icon-icon-send"></use>
+              </svg></div>
+          </button>
+        </form>
+      </div>
     </div>
   </footer> 
 </body>
