--- a/index.html
+++ b/index.html
@@ -380,11 +380,11 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn-close" data-modal-close>
-          <span class="btn-close">
+          
             <svg class="btn-close-cross">
-                  <use class="" href="./img/icons/sprite-form.svg#icon-cross"></use>
+                  <use class="" href="../img/icons/sprite-form.svg#icon-cross"></use>
                 </svg>
-          </span>
+         
         </button>
          <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
             <div class="">
@@ -412,7 +412,7 @@
                     </div> 
                         <label for="comment" class="form-label">Коментарий</label>
                         <textarea
-                        class="form-comment "
+                        class="form-comment"
                         name="comment"
                         id="comment"
                         placeholder="Введите текст"></textarea> 
