--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     </div> 
                         <label for="comment" class="form-label">Коментарий</label>
                         <textarea
-                        class="form-comment"
+                        class="form-comment form-comment-color "
                         name="comment"
                         id="comment"
                         placeholder="Введите текст"></textarea> 
